RESOLVED FIXED269121
[WebGPU] endEncoding should be called when command encoder becomes invalid
https://bugs.webkit.org/show_bug.cgi?id=269121
Summary [WebGPU] endEncoding should be called when command encoder becomes invalid
Mike Wyrzykowski
Reported 2024-02-09 17:06:38 PST
[WebGPU] endEncoding should be called when command encoder become invalid
Attachments
Mike Wyrzykowski
Comment 1 2024-02-09 17:07:02 PST
Mike Wyrzykowski
Comment 2 2024-02-09 17:14:19 PST
EWS
Comment 3 2024-02-12 16:37:18 PST
Committed 274504@main (94e8daf96766): <https://commits.webkit.org/274504@main> Reviewed commits have been landed. Closing PR #24192 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.