[WebGPU] endEncoding should be called when command encoder becomes invalid https://bugs.webkit.org/show_bug.cgi?id=269121 <radar://122334686>

Reviewed by Dan Glastonbury.

Encoder creation failed due to: "A command encoder is already encoding to this command buffer"
which means the previous encoder did not call endEncoding.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::endEncoding):
Update CommandEncoder::endEncoding to ensure -[MTLCommandEncoder endEncoding] is always called.

Canonical link: https://commits.webkit.org/274504@main